[project]
name = "haven"
version = "1.0"
description = ""
authors = [
    {name = "Vadim Suharnikov", email = "vsuharnikov@gmail.com"},
]
dependencies = [
    "httpx>=0.22.0",
    "rich>=12.4.1",
    "yarl>=1.7.2",
    "click>=8.1.3",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "flake8>=4.0.1",
    "autopep8>=1.6.0",
    "isort>=5.10.1",
    "wemake-python-styleguide>=0.16.1",
    "pre-commit>=2.19.0",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[project.scripts]
haven = "haven.__main__:main"
