[project]
name = "haven"
version = "1.0"
description = ""
authors = [
    {name = "Vadim Suharnikov", email = "vsuharnikov@gmail.com"},
]
dependencies = [
    "rich>=12.4.1",
    "click>=8.1.3",
    "httpx>=0.23.0",
    "pydantic>=1.9.1",
    "yarl>=1.7.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[project.scripts]
haven = "haven.__main__:main"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "flake8>=4.0.1",
    "autopep8>=1.6.0",
    "isort>=5.10.1",
    "wemake-python-styleguide>=0.16.1",
    "pre-commit>=2.19.0",
    "pytest>=7.1.2",
    "pytest-asyncio>=0.18.3",
]


[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]


[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
